--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Главная - Tennesse Role Play</title>
+    <title>Главная - Magnat RolePlay</title>
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="public/main/css/boo.css">
@@ -25,7 +25,7 @@
                         <a href='donate.html'>Донат</a>
                         <a href='news.html'>Новости</a>
                         <a href='profile/roulette.html'>Рулетка</a>
-                        <a href='forum.html'>Форум</a>
+                        <a href=''>Форум</a>
                     </div>
 
                     <div class="nav-lk">
@@ -65,7 +65,7 @@
                     <a href='profile/roulette.html'>Рулетка</a>
                 </li>
                 <li class="menu__item-m">
-                    <a href='forum.html'>Форум</a>
+                    <a href=''>Форум</a>
                 </li>
                 <li class="menu__item-m ">
                                         <a href="profile/index.html">Личный кабинет</a>
@@ -78,7 +78,7 @@
     <section class="slider">
 
         <div class="slider_img">
-           <img src="public/main/img/tennesse.png" alt="" height="400">
+           <img src="" alt="" height="400">
         </div>
 
 
@@ -102,7 +102,7 @@
                 <div class="roul__item roul__item--three">
                     <div class="roul__title">Подключитесь к нашему серверу</div>
                     <div class="roul__text"><p>Добавьте наш сервер в избранное и подключитесь к нему</p>
-                        <p>IP: 111.111.111:7777</p></div>
+                        <p>IP: В разработке</p></div>
                     <a href="samp:111.111.111:7777" class="roul__icon"><img src="public/main/img/download-icon.png" alt="" height="35px"></a>
                 </div>
             </div>
@@ -119,25 +119,25 @@
 
                             <div class="res__title">Мы ВКонтакте</div>
                             <div class="res__subtitle">Оффициальная группа</div>
-                            <a class="res__btn" href="https://vk.com/samp_tennesseerp"><div class="btn__text">Перейти</div></a>
+                            <a class="res__btn" href="">https://vk.com/magnat_roleplay<div class="btn__text">Перейти</div></a>
                         </div>
                         <div class="res__item res__item--vk">
 
                             <div class="res__title">Мы ВКонтакте</div>
                             <div class="res__subtitle">Сотрудничество с проектом</div>
-                            <a class="res__btn" href="https://vk.com/tennesseerpmedia"><div class="btn__text">Перейти</div></a>
+                            <a class="res__btn" href="">https://vk.com/magnat_roleplay<div class="btn__text">Перейти</div></a>
                         </div>
                         <div class="res__item res__item--yt">
 
                             <div class="res__title">YouTube канал</div>
                             <div class="res__subtitle">Стримы, обзоры, промо-ролики</div>
-                            <a class="res__btn" href="youtube.com..html"><div class="btn__text">Перейти</div></a>
+                            <a class="res__btn" href=""><div class="btn__text">Перейти</div></a>
                         </div>
                         <div class="res__item res__item--ds">
 
                             <div class="res__title">Discord канал</div>
                             <div class="res__subtitle">Ищите новые знакомства</div>
-                            <a class="res__btn" href="https://discordapp.com/invite/q4ZP55"><div class="btn__text">Перейти</div></a>
+                            <a class="res__btn" href=""><div class="btn__text">Перейти</div></a>
                         </div>
                         </div>
 
@@ -150,7 +150,7 @@
 
 <div class="container__footer">
 <div id="footer">
-    <div class="footer__title">Developed by tennesse team © 2020</div>
+    <div class="footer__title">Magnat RolePlay © 2021</div>
     <div class="footer__subtitle">Все права защищены.<br>
 Любое копирование материала запрещено!</div>
 </div>
