--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="nav-lk">
-                        <img src="public/main/img/person.svg.html" alt="">
+                        <img src="" alt="">
                                                 <a class="nav_test" href="profile/index.html">Личный кабинет</a>
                         
 
