--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
     <div class="burg">
         <nav id="desktop">
             <div class="container">
-                <img src="public/main/img/logo.png" class="nav-brand">
+                <img src="" class="nav-brand">
                 <div class="nav-content">
                     <div class="nav-items">
                         <a href='index.html'>Главная</a>
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="nav-lk">
-                        <img src="public/main/img/person.svg.html" alt="">
+                        <img src="" alt="">
                                                 <a class="nav_test" href="profile/index.html">Личный кабинет</a>
                         
 
