--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 
                             <div class="res__title">Мы ВКонтакте</div>
                             <div class="res__subtitle">Оффициальная группа</div>
-                            <a class="res__btn" href="">https://vk.com/magnat_roleplay<div class="btn__text">Перейти</div></a>
+                            <a class="res__btn" href="https://vk.com/magnat_roleplay"><div class="btn__text">Перейти</div></a>
                         </div>
                         <div class="res__item res__item--vk">
 
                             <div class="res__title">Мы ВКонтакте</div>
                             <div class="res__subtitle">Сотрудничество с проектом</div>
-                            <a class="res__btn" href="">https://vk.com/magnat_roleplay<div class="btn__text">Перейти</div></a>
+                            <a class="res__btn" href="https://vk.com/magnat_roleplay"><div class="btn__text">Перейти</div></a>
                         </div>
                         <div class="res__item res__item--yt">
 
